# Arynoxtech_AGI

./: Dockerfile  MANIFEST.in  README.md  THESIS.md  USAGE_GUIDE.md  main.py  pyproject.toml  requirements.txt  setup.py  test_multi_domain.py
Arynoxtech_AGI.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
arynoxtech_agi/: __init__.py  cli.py  client.py  config.py  response.py
config/: agi_config.json
core/: __init__.py  auto_trainer.py  brain.py  cache_manager.py  data_ingestion.py  domain_adaptor.py  emotional_intelligence.py  llm_engine.py  memory.py  nlp_engine.py  orchestrator.py  rag_engine.py  self_evolution.py  voice.py  web_bots.py  web_fetcher.py
data/: ingestion_index.json
data/domains/code_assistant/: programming_guide.json
data/domains/customer_support/: faq.json
data/domains/education_tutor/: learning_guide.json
data/domains/health_advisor/: wellness_guide.json
data/domains/research_assistant/: research_guide.json
memory/: brain_state.json
memory/long_term/: memory_index.json
memory/semantic/: concepts.json
tests/: test_arynoxtech_agi.py
