[build-system]
requires = ["setuptools>=68.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Arynoxtech_AGI"
version = "2.0.1"
description = "Multi-Domain Adaptive Artificial General Intelligence - Works across 8+ industries. Better than LangChain with native AGI capabilities."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Aryan Chavan", email = "aryaanchavan1@gmail.com"},
]
keywords = [
    "ai",
    "agi",
    "artificial-intelligence",
    "artificial-general-intelligence",
    "chatbot",
    "nlp",
    "natural-language-processing",
    "machine-learning",
    "deep-learning",
    "rag",
    "retrieval-augmented-generation",
    "customer-support",
    "healthcare",
    "education",
    "coding-assistant",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "aiohttp>=3.8.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.9.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "nltk>=3.8.0",
    # Note: scipy is a dependency of scikit-learn and nltk
    # The system includes fallback methods if scipy fails to install
    "faiss-cpu>=1.7.0",
    "chromadb>=0.4.0",
    "requests>=2.31.0",
    "json5>=0.9.0",
    "pyyaml>=6.0",
    "diskcache>=5.6.0",
    "joblib>=1.3.0",
    "lz4>=4.3.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
    "colorama>=0.4.6",
    "rich>=13.5.0",
]

[project.optional-dependencies]
voice = [
    "pyttsx3>=2.90",
    "SpeechRecognition>=3.10",
    "pyaudio>=0.2.13",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
]
web = [
    "selenium>=4.15.0",
    "newspaper3k>=0.2.8",
]
all = [
    "arynoxtech_agi[voice,api,web]",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
]

[project.urls]
Homepage = "https://github.com/aryaanchavan1-commits/Arynoxtech_AGI"
Documentation = "https://github.com/aryaanchavan1-commits/Arynoxtech_AGI#readme"
Repository = "https://github.com/aryaanchavan1-commits/Arynoxtech_AGI"
"Bug Tracker" = "https://github.com/aryaanchavan1-commits/Arynoxtech_AGI/issues"

[project.scripts]
arynoxtech_agi = "arynoxtech_agi.cli:main"

[tool.setuptools.packages.find]
include = ["arynoxtech_agi*", "core*", "data*"]
exclude = ["venv*", "tests*", "backup*", ".git*"]

[tool.setuptools.package-data]
"*" = [
    "data/domains/**/*.json",
    "config/*.json",
    "*.json",
]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312', 'py313', 'py314']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]